--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/GdxTheme" >
+        android:theme="@style/GdxTheme"
+        android:hardwareAccelerated="true">
         <activity
             android:name="com.xqs.mypaoku.AndroidLauncher"
             android:label="@string/app_name" 
