--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -4,7 +4,7 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="24" />
+
 
     <application
         android:allowBackup="true"
@@ -12,6 +12,7 @@
         android:label="@string/app_name"
         android:theme="@style/GdxTheme"
         android:hardwareAccelerated="true">
+
         <activity
             android:name="com.xqs.mypaoku.AndroidLauncher"
             android:label="@string/app_name" 
@@ -22,6 +23,21 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id"/>
+
+        <provider
+            android:authorities="com.facebook.app.FacebookContentProvider202252443613822"
+            android:name="com.facebook.FacebookContentProvider"
+            android:exported="true" />
+
     </application>
+
+
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
 </manifest>
